syntax = "proto3";

package greeter;

option java_package = "server";
option java_multiple_files = true;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}
message HelloResponse {
  string message = 1;
}
